Code & Content Updates
- Remove search box from middle of page.
-  Fix spelling
- Content updates
- CSS update to remove underline on social icon links

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -526,6 +526,9 @@ ol ol {
   padding-left: 5px;
   padding-right: 5px;
 }
+.list-inline a:hover:not(.btn), .section-standout .list-inline a:hover:not(.btn) {
+	text-decoration: none;
+}
 dl {
   margin-top: 0;
   margin-bottom: 22px;
