Resetting Code Revert
Please ignore this release

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -2059,6 +2059,7 @@ select[multiple].input-lg {
   text-decoration: none;
 }
 .btn:active,
+
 .btn.active {
   outline: 0;
   background-image: none;
@@ -3127,6 +3128,7 @@ a.label:focus {
 }
 .alert .alert-link {
   font-weight: bold;
+
 }
 .alert > p,
 .alert > ul {
@@ -4088,7 +4090,7 @@ button.close {
    /source/less/bootstrap-accessibility-plugin/button.less
 ----------------------------------------- */
 .btn:focus {
-  outline: dotted 1px #fff;
+  outline: dotted 2px #000;
 }
 /* -----------------------------------------
    /source/less/bootstrap-accessibility-plugin/divs.less
@@ -8246,6 +8248,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .utility-header .settings-links {
   font-size: 87%;
   text-align: right;
+
 }
 @media (max-width: 767px) {
   .utility-header .settings-links {
@@ -10041,6 +10044,7 @@ body {
 .service-tile-content .panel-heading .panel-title a:focus {
   text-decoration: none;
 }
+
 .accordion .panel-heading .panel-title a:after,
 .panel-group .panel-heading .panel-title a:after,
 .service-tile-content .panel-heading .panel-title a:after {
@@ -11214,6 +11218,7 @@ figcaption {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 @media (min-width: 768px) {
   .location.banner .summary {
     float: left;
@@ -12575,7 +12580,7 @@ fieldset[disabled] a.btn-more {
   -webkit-transition: all .3s;
           transition: all .3s;
 }
-.service-tile .teaser .title:hover, .service-tile:focus .teaser .title {
+.service-tile .teaser .title:hover {
   color: #FDB81E;
 }
 .title:after {
@@ -13526,9 +13531,6 @@ fieldset[disabled] .mapthat-facet-item.active {
   height: 32px;
   position: absolute;
   margin-left: 7px;
-}
-.branding .header-cagov-logo a:focus img {
-	outline:1px dotted black;
 }
 
 .utility-header ul li {
