Issue #1 and #2 Fix
#1-No focus indicator for some elements

Updated file:
css/cagov.core.css

line 4091

.btn:focus {
outline: dotted 1px #fff;
}

line 12578

.service-tile .teaser .title:hover, .service-tile:focus .teaser .title {
color: #FDB81E;
}

line 13530

.branding .header-cagov-logo a:focus img {
outline:1px dotted black;
}

#2-Anchor Issue with Fixed Header

Updated file:
css/cagov.core.css

line 13870

.fixed + div :target:before {
display: block;
content: "";
height: 110px;
margin: -110px 0 0;
}

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -2059,7 +2059,6 @@ select[multiple].input-lg {
   text-decoration: none;
 }
 .btn:active,
-
 .btn.active {
   outline: 0;
   background-image: none;
@@ -3128,7 +3127,6 @@ a.label:focus {
 }
 .alert .alert-link {
   font-weight: bold;
-
 }
 .alert > p,
 .alert > ul {
@@ -4090,7 +4088,7 @@ button.close {
    /source/less/bootstrap-accessibility-plugin/button.less
 ----------------------------------------- */
 .btn:focus {
-  outline: dotted 2px #000;
+  outline: dotted 1px #fff;
 }
 /* -----------------------------------------
    /source/less/bootstrap-accessibility-plugin/divs.less
@@ -8248,7 +8246,6 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .utility-header .settings-links {
   font-size: 87%;
   text-align: right;
-
 }
 @media (max-width: 767px) {
   .utility-header .settings-links {
@@ -10044,7 +10041,6 @@ body {
 .service-tile-content .panel-heading .panel-title a:focus {
   text-decoration: none;
 }
-
 .accordion .panel-heading .panel-title a:after,
 .panel-group .panel-heading .panel-title a:after,
 .service-tile-content .panel-heading .panel-title a:after {
@@ -11218,7 +11214,6 @@ figcaption {
   padding-left: 15px;
   padding-right: 15px;
 }
-
 @media (min-width: 768px) {
   .location.banner .summary {
     float: left;
@@ -12580,7 +12575,7 @@ fieldset[disabled] a.btn-more {
   -webkit-transition: all .3s;
           transition: all .3s;
 }
-.service-tile .teaser .title:hover {
+.service-tile .teaser .title:hover, .service-tile:focus .teaser .title {
   color: #FDB81E;
 }
 .title:after {
@@ -13532,6 +13527,9 @@ fieldset[disabled] .mapthat-facet-item.active {
   position: absolute;
   margin-left: 7px;
 }
+.branding .header-cagov-logo a:focus img {
+	outline:1px dotted black;
+}
 
 .utility-header ul li {
    padding: 0 8px;
@@ -13867,6 +13865,13 @@ body {
   right: 5px;
   line-height: 16px;
 	display: none;
+}
+
+.fixed + div :target:before {
+	display: block;
+	content: "";
+	height: 110px;
+	margin: -110px 0 0;
 }
 
 /* This is to hide the Link description Field in mobile, commenting out.
